# kosu

./: .gitignore  CMakeLists.txt  gamestate.cpp  gamestate.hpp  machine.cpp  machine.hpp  main.cpp  menudetail.cpp  menudetail.hpp  menustate.cpp  menustate.hpp
models/: board.hpp  cell.cpp  cell.hpp
views/: board.cpp  board.hpp  cell.cpp  cell.hpp  common.hpp
